# Medical-Imaging-SIGGRAPH

./: README.md  vcpkg-configuration.json  vcpkg.json
MBG/: CMakeLists.txt  copy_folders.cmake  copy_shaders.cmake
MBG/MBG/OpenGL/: CommandBuffer.hpp  FrameGraph.cpp  FrameGraph.hpp  Info.hpp  RenderPass.cpp  RenderPass.hpp  Window.cpp  Window.hpp
MBG/MBG/OpenGL/Memory/: DescriptorSetBuffer.hpp  ElementBuffer.hpp  IndirectDrawBuffer.hpp  InstancedElementBuffer.hpp  InstancedVertexBuffer.hpp  ShaderStorageBuffer.hpp  Texture2DArrayBuffer.hpp  Texture2DBuffer.hpp  Texture3DBuffer.hpp  TextureBuffer.hpp  TextureCubeMapBuffer.hpp  UniformBuffer.hpp  VertexBuffer.hpp
MBG/Tests/: tests.cpp
MBG/Tests/Shaders/: simple_fluid.glsl  simple_image.glsl
MBG/python/: Generation_Guide.md  import_scan.py  medical_imaging_loader.py  requirements.txt
MBG/src/: callback_funcs.cpp  callback_funcs.hpp  camera.cpp  camera.hpp  common.hpp  main.cpp  texgen.cpp  texgen.hpp
MBG/src/Shaders/: MIP.glsl  PBR.glsl  alpha_blender.glsl  isosurface.glsl  main.cpp  simple_raymarch.glsl
